--- a/HDT5.ipynb
+++ b/HDT5.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn import svm\n",
     "\n",
@@ -416,26 +416,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross Validation Scores:  [1. 1. 1. 1. 1.]\n",
-      "Average CV Score:  1.0\n",
-      "Number of CV Scores used in Average:  5\n"
+      "Cross Validation Scores:  [0.9707113  0.9623431  0.958159   0.9790795  0.92468619]\n",
+      "Average CV Score:  0.9589958158995815\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\yeyoc\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "C:\\Users\\yeyoc\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "C:\\Users\\yeyoc\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "C:\\Users\\yeyoc\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "C:\\Users\\yeyoc\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
    "source": [
-    "clf = DecisionTreeClassifier(random_state=42)\n",
+    "clf = LogisticRegression(random_state=42)\n",
     "scores = cross_val_score(clf, X, Y, cv = 5)\n",
     "\n",
     "print(\"Cross Validation Scores: \", scores)\n",
-    "print(\"Average CV Score: \", scores.mean())\n",
-    "print(\"Number of CV Scores used in Average: \", len(scores))"
+    "print(\"Average CV Score: \", scores.mean())"
    ]
   },
   {
@@ -443,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El modelo de validacion cruzada presenta "
+    "El modelo de validacion cruzada presenta una gran mejora sobre el modelo anterior, con resultados muy cercanos a la exactitud."
    ]
   },
   {
@@ -452,6 +496,14 @@
    "metadata": {},
    "source": [
     "10. Compare la eficiencia del algoritmo con el resultado obtenido con el árbol de decisión (el de clasificación) y el modelo de random forest que hizo en la hoja pasada. ¿Cuál es mejor para predecir? ¿Cuál se demoró más en procesar?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En eficiencia, el modelo de clasificación es mucho mejor que el modelo de random forest generado en la hoja pasada, además, ambos se tardan mas o menos el mismo tiempo, por lo que se determina que el modelo de la hoja actual es superior, al menos para este set de datos."
    ]
   }
  ],
